--- a/configs/image_disease_classification_rel_syn.yaml
+++ b/configs/image_disease_classification_rel_syn.yaml
@@ -2,7 +2,7 @@ seed_everything: 19
 
 trainer:
 
-  default_root_dir: ./results/image_disease_classification_19
+  default_root_dir: ./results/image_disease_classification_syn_syn
   accelerator: cuda
   devices: 1
   log_every_n_steps: 1
@@ -20,17 +20,20 @@ trainer:
         monitor: 'val_loss'
         mode: 'min'  # or 'max' depending on your metric
         save_top_k: 20  # save only the best checkpoint
-        dirpath: './results/image_disease_classification_19/checkpoints/'
+        dirpath: './results/image_disease_classification_syn_syn/checkpoints/'
         filename: 'best_val_loss-{epoch:02d}-{val_loss:.4f}'
 
   
 
 data: # data.moudle.DataModule
   train_dataset:
-    class_path: data.image.dataset_class.ImageDataset_all
+  # data_folder_path,discovery ='/*' ,split_name='all' , split_ratio = 0.8, transform=None
+    class_path: data.image.dataset_class.ImageDatasetOneFolder
     init_args:
-      dataframe_path: ./datasets/train_df.csv
-      path_image: /datasets/mimic-cxr/physionet.org/files/mimic-cxr-jpg/2.0.0/files
+      data_folder_path: /fs01/home/hhamidi/mount/ldm_new_2/class1
+      discovery: /*.png
+      split_name: train
+      split_ratio: 1
       transform:
         class_path: torchvision.transforms.Compose
         init_args:
@@ -51,10 +54,12 @@ data: # data.moudle.DataModule
               mean: [0.485, 0.456, 0.406]
               std: [0.229, 0.224, 0.225]
   val_dataset:
-    class_path: data.image.dataset_class.ImageDataset_all
+    class_path: data.image.dataset_class.ImageDatasetOneFolder
     init_args:
-      dataframe_path: ./datasets/val_df.csv
-      path_image: /datasets/mimic-cxr/physionet.org/files/mimic-cxr-jpg/2.0.0/files
+      data_folder_path: /fs01/home/hhamidi/mount/ldm_new_2/class1
+      discovery: /*.png
+      split_name: val
+      split_ratio: 0.1
       transform:
         class_path: torchvision.transforms.Compose
         init_args:
@@ -71,10 +76,12 @@ data: # data.moudle.DataModule
               mean: [0.485, 0.456, 0.406]
               std: [0.229, 0.224, 0.225]
   test_dataset:
-    class_path: data.image.dataset_class.ImageDataset_all
+    class_path: data.image.dataset_class.ImageDatasetOneFolder
     init_args:
-      dataframe_path: ./datasets/test_df.csv
-      path_image: /datasets/mimic-cxr/physionet.org/files/mimic-cxr-jpg/2.0.0/files
+      data_folder_path: /fs01/home/hhamidi/mount/ldm_new_2/class1
+      discovery: /*.png
+      split_name: val
+      split_ratio: 0.1
       transform:
         class_path: torchvision.transforms.Compose
         init_args:
@@ -106,4 +113,5 @@ model: # models.module.CLS
     class_path: torch.nn.BCEWithLogitsLoss
   weight_decay: 0.0005
   prediction_on: "test"
-  save_probabilities_path: ./results/image_disease_classification_19/probabilities
+  save_probabilities_path: ./results/image_disease_classification_syn_syn/probabilities/
+  lr: 0.0001
