--- a/configs/chexpert_all.yaml
+++ b/configs/chexpert_all.yaml
@@ -1,7 +1,9 @@
 seed_everything: 19
 
+
 trainer:
-  default_root_dir: ./results/image_syn_real_20k/
+
+  default_root_dir: ./results/chexpert_all/
   accelerator: gpu
   devices: 1  # Change this number to the number of GPUs you have
   # strategy: ddp
@@ -12,24 +14,27 @@ trainer:
   - class_path: lightning.pytorch.callbacks.EarlyStopping
     init_args:
         monitor: 'val_loss'
-        patience: 10
+        patience: 4
         mode: 'min'  # or 'max' depending on your metric
   - class_path: lightning.pytorch.callbacks.ModelCheckpoint
     init_args:
         monitor: 'val_loss'
         mode: 'min'  # or 'max' depending on your metric
         save_top_k: 20  # save only the best checkpoint
-        dirpath: './results/image_syn_real_20k/checkpoints/'
+        dirpath: ${trainer.default_root_dir}checkpoints/
         filename: 'best_val_loss-{epoch:02d}-{val_loss:.4f}'
 
   
 
 data: # data.moudle.DataModule
+  global_variable:
+    image_root_path: /local/data/physionet.org/files/CheXpert-v1.0/
+    csv_root: /local/home/hhamidi/project/med-stable-diffusion/data/csv/chexpert/chexpert
   train_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/samples.csv
-        image_root_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/
+        csv_path: ${data.global_variable.csv_root}_train.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -37,8 +42,6 @@ data: # data.moudle.DataModule
           - Atelectasis
           - Pleural Effusion
           - No Finding
-
-          
         use_upsampling: True
         use_frontal: True
         image_size: 224
@@ -47,8 +50,8 @@ data: # data.moudle.DataModule
   val_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: ${data.global_variable.csv_root}_val.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -64,8 +67,8 @@ data: # data.moudle.DataModule
   test_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: ${data.global_variable.csv_root}_test.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -96,7 +99,7 @@ model: # models.module.CLS
     class_path: torch.nn.BCEWithLogitsLoss
   weight_decay: 0.0
   prediction_on: "test"
-  save_probabilities_path: ./results/image_syn_real_20k/probabilities/
+  save_probabilities_path: ${trainer.default_root_dir}probabilities/
   lr: 0.0001
 
-  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c ./configs/image_chexpert_real_real_nf_adv.yaml
+  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c /local/home/hhamidi/fairness_on_embeddings/configs/chexpert_all.yaml
