--- a/configs/image_syn_real_chexpert_val.yaml
+++ b/configs/image_syn_real_chexpert_val.yaml
@@ -1,7 +1,7 @@
 seed_everything: 19
 
 trainer:
-  default_root_dir: ./results/image_syn_real_20k/
+  default_root_dir: ./results/image_syn_real_one_class/
   accelerator: gpu
   devices: 1  # Change this number to the number of GPUs you have
   # strategy: ddp
@@ -19,7 +19,7 @@ trainer:
         monitor: 'val_loss'
         mode: 'min'  # or 'max' depending on your metric
         save_top_k: 20  # save only the best checkpoint
-        dirpath: './results/image_syn_real_20k/checkpoints/'
+        dirpath: './results/image_syn_real_one_class/checkpoints/'
         filename: 'best_val_loss-{epoch:02d}-{val_loss:.4f}'
 
   
@@ -28,8 +28,8 @@ data: # data.moudle.DataModule
   train_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/samples.csv
-        image_root_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/
+        csv_path: /local/data/syn_samples/sample_from_chexpert_train_label_last2/samples.csv
+        image_root_path: /local/data/syn_samples/sample_from_chexpert_train_label_last2/
         train_cols:
           - Cardiomegaly
           - Edema
@@ -37,8 +37,6 @@ data: # data.moudle.DataModule
           - Atelectasis
           - Pleural Effusion
           - No Finding
-
-          
         use_upsampling: True
         use_frontal: True
         image_size: 224
@@ -47,8 +45,8 @@ data: # data.moudle.DataModule
   val_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/val_from_train.csv
+        image_root_path: /local/data/physionet.org/files/CheXpert-v1.0/
         train_cols:
           - Cardiomegaly
           - Edema
@@ -64,8 +62,8 @@ data: # data.moudle.DataModule
   test_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/val_from_train.csv
+        image_root_path: /local/data/physionet.org/files/CheXpert-v1.0/
         train_cols:
           - Cardiomegaly
           - Edema
@@ -96,7 +94,7 @@ model: # models.module.CLS
     class_path: torch.nn.BCEWithLogitsLoss
   weight_decay: 0.0
   prediction_on: "test"
-  save_probabilities_path: ./results/image_syn_real_20k/probabilities/
+  save_probabilities_path: ./results/image_syn_real_one_class/probabilities/
   lr: 0.0001
 
   #CUDA_VISIBLE_DEVICES=1  python main.py fit -c ./configs/image_chexpert_real_real_nf_adv.yaml
