--- a/configs/mimic_all.yaml
+++ b/configs/mimic_all.yaml
@@ -1,7 +1,7 @@
 seed_everything: 19
 
 trainer:
-  default_root_dir: ./results/image_syn_real_20k/
+  default_root_dir: ./results/mimic_all/
   accelerator: gpu
   devices: 1  # Change this number to the number of GPUs you have
   # strategy: ddp
@@ -19,7 +19,7 @@ trainer:
         monitor: 'val_loss'
         mode: 'min'  # or 'max' depending on your metric
         save_top_k: 20  # save only the best checkpoint
-        dirpath: './results/image_syn_real_20k/checkpoints/'
+        dirpath: './results/mimic_all/checkpoints/'
         filename: 'best_val_loss-{epoch:02d}-{val_loss:.4f}'
 
   
@@ -28,8 +28,8 @@ data: # data.moudle.DataModule
   train_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/samples.csv
-        image_root_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/
+        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv/mimic/mimic_train_all.csv
+        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
         train_cols:
           - Cardiomegaly
           - Edema
@@ -37,8 +37,6 @@ data: # data.moudle.DataModule
           - Atelectasis
           - Pleural Effusion
           - No Finding
-
-          
         use_upsampling: True
         use_frontal: True
         image_size: 224
@@ -47,7 +45,7 @@ data: # data.moudle.DataModule
   val_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
+        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv/mimic/mimic_val.csv
         image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
         train_cols:
           - Cardiomegaly
@@ -59,12 +57,12 @@ data: # data.moudle.DataModule
         use_upsampling: False
         use_frontal: True
         image_size: 224
-        mode: test
+        mode: val
         class_index: -1
   test_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
+        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv/mimic/mimic_test.csv
         image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
         train_cols:
           - Cardiomegaly
@@ -81,7 +79,7 @@ data: # data.moudle.DataModule
 
 
   batch_size: 32
-  num_workers: 16
+  num_workers: 32
   prediction_on: "test"
 
 
@@ -96,7 +94,7 @@ model: # models.module.CLS
     class_path: torch.nn.BCEWithLogitsLoss
   weight_decay: 0.0
   prediction_on: "test"
-  save_probabilities_path: ./results/image_syn_real_20k/probabilities/
+  save_probabilities_path: ./results/mimic_all/probabilities/
   lr: 0.0001
 
-  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c ./configs/image_chexpert_real_real_nf_adv.yaml
+  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c /local/home/hhamidi/fairness_on_embeddings/configs/mimic_all.yaml
