--- a/configs/chexpert_real_syn.yaml
+++ b/configs/chexpert_real_syn.yaml
@@ -1,7 +1,7 @@
 seed_everything: 19
 
 trainer:
-  default_root_dir: ./results/chexpert_all/
+  default_root_dir: ./results/chexpert_real_syn/
   accelerator: gpu
   devices: 1  # Change this number to the number of GPUs you have
   # strategy: ddp
@@ -106,7 +106,7 @@ data: # data.moudle.DataModule
 
 
   batch_size: 32
-  num_workers: 8
+  num_workers: 16
   prediction_on: "test"
 
 
