--- a/configs/chexpert_syn.yaml
+++ b/configs/chexpert_syn.yaml
@@ -1,7 +1,9 @@
 seed_everything: 19
 
+
 trainer:
-  default_root_dir: ./results/mimic_all/
+
+  default_root_dir: ./results/chexpert_syn_val_chexpert/
   accelerator: gpu
   devices: 1  # Change this number to the number of GPUs you have
   # strategy: ddp
@@ -12,24 +14,29 @@ trainer:
   - class_path: lightning.pytorch.callbacks.EarlyStopping
     init_args:
         monitor: 'val_loss'
-        patience: 10
+        patience: 4
         mode: 'min'  # or 'max' depending on your metric
   - class_path: lightning.pytorch.callbacks.ModelCheckpoint
     init_args:
         monitor: 'val_loss'
         mode: 'min'  # or 'max' depending on your metric
         save_top_k: 20  # save only the best checkpoint
-        dirpath: './results/mimic_all/checkpoints/'
+        dirpath: ${trainer.default_root_dir}checkpoints/
         filename: 'best_val_loss-{epoch:02d}-{val_loss:.4f}'
 
   
 
 data: # data.moudle.DataModule
+  global_variable:
+    image_root_path: /local/data/physionet.org/files/CheXpert-v1.0/
+    csv_root: /local/home/hhamidi/project/med-stable-diffusion/data/csv/chexpert/chexpert
+    image_root_path_syn: /local/data/syn_samples/sample_from_chexpert_train_label_last2/
+    csv_root_syn: /local/data/syn_samples/sample_from_chexpert_train_label_last2/
   train_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv/mimic/mimic_train.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: ${data.global_variable.csv_root_syn}samples.csv
+        image_root_path: ${data.global_variable.image_root_path_syn}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -45,8 +52,8 @@ data: # data.moudle.DataModule
   val_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv/mimic/mimic_val.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: ${data.global_variable.csv_root}_val.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -62,8 +69,8 @@ data: # data.moudle.DataModule
   test_dataset:
     class_path: data.image.dataset_class.CheXpert_Advanced
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv/mimic/mimic_test.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: ${data.global_variable.csv_root}_test.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -79,7 +86,7 @@ data: # data.moudle.DataModule
 
 
   batch_size: 32
-  num_workers: 32
+  num_workers: 16
   prediction_on: "test"
 
 
@@ -94,7 +101,7 @@ model: # models.module.CLS
     class_path: torch.nn.BCEWithLogitsLoss
   weight_decay: 0.0
   prediction_on: "test"
-  save_probabilities_path: ./results/mimic_all/probabilities/
+  save_probabilities_path: ${trainer.default_root_dir}probabilities/
   lr: 0.0001
 
-  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c /local/home/hhamidi/fairness_on_embeddings/configs/mimic_all.yaml
+  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c /local/home/hhamidi/fairness_on_embeddings/configs/chexpert_all.yaml
