--- a/configs/mimic_syn.yaml
+++ b/configs/mimic_syn.yaml
@@ -1,7 +1,8 @@
 seed_everything: 19
 
+
 trainer:
-  default_root_dir: ./results/image_syn_real_20k/
+  default_root_dir: ./results/mimic_base/
   accelerator: gpu
   devices: 1  # Change this number to the number of GPUs you have
   # strategy: ddp
@@ -12,24 +13,31 @@ trainer:
   - class_path: lightning.pytorch.callbacks.EarlyStopping
     init_args:
         monitor: 'val_loss'
-        patience: 10
+        patience: 4
         mode: 'min'  # or 'max' depending on your metric
   - class_path: lightning.pytorch.callbacks.ModelCheckpoint
     init_args:
         monitor: 'val_loss'
         mode: 'min'  # or 'max' depending on your metric
-        save_top_k: 20  # save only the best checkpoint
-        dirpath: './results/image_syn_real_20k/checkpoints/'
+        save_top_k: 3  # save only the best checkpoint
+        dirpath: ${trainer.default_root_dir}checkpoints/
         filename: 'best_val_loss-{epoch:02d}-{val_loss:.4f}'
 
   
 
 data: # data.moudle.DataModule
+  global_variable:
+    image_root_path: /datasets/mimic/mimic-cxr-jpg/2.0.0/
+    # for prediction process or training process?
+    use_frontal: False
+    shuffle: False
+    prediction_on: "val"
+
   train_dataset:
-    class_path: data.image.dataset_class.CheXpert_Advanced
+    class_path: data.image.dataset_class.AdvancedCLS
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/samples.csv
-        image_root_path: /local/home/hhamidi/project/med-stable-diffusion/sample_from_chexpert_train_label_last2/
+        csv_path: /home/hhamidi/clean/per_storage/csvs/mimic/mimic_train_fairness.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -37,18 +45,17 @@ data: # data.moudle.DataModule
           - Atelectasis
           - Pleural Effusion
           - No Finding
-
-          
-        use_upsampling: True
-        use_frontal: True
+        use_upsampling: False
+        shuffle: ${data.global_variable.shuffle}
+        use_frontal: ${data.global_variable.use_frontal}
         image_size: 224
         mode: train
         class_index: -1
   val_dataset:
-    class_path: data.image.dataset_class.CheXpert_Advanced
+    class_path: data.image.dataset_class.AdvancedCLS
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: /home/hhamidi/clean/per_storage/csvs/mimic/mimic_val_fairness.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -57,15 +64,16 @@ data: # data.moudle.DataModule
           - Pleural Effusion
           - No Finding
         use_upsampling: False
-        use_frontal: True
+        shuffle: ${data.global_variable.shuffle}
+        use_frontal: ${data.global_variable.use_frontal}
         image_size: 224
-        mode: test
+        mode: val
         class_index: -1
   test_dataset:
-    class_path: data.image.dataset_class.CheXpert_Advanced
+    class_path: data.image.dataset_class.AdvancedCLS
     init_args:
-        csv_path: /local/home/hhamidi/project/med-stable-diffusion/data/csv_files/mimic_all.csv
-        image_root_path: /local/data/physionet.org/files/mimic-cxr-jpg/2.0.0/
+        csv_path: /home/hhamidi/clean/per_storage/csvs/mimic/mimic_test_fairness.csv
+        image_root_path: ${data.global_variable.image_root_path}
         train_cols:
           - Cardiomegaly
           - Edema
@@ -74,15 +82,16 @@ data: # data.moudle.DataModule
           - Pleural Effusion
           - No Finding
         use_upsampling: False
-        use_frontal: True
+        shuffle: ${data.global_variable.shuffle}
+        use_frontal: ${data.global_variable.use_frontal}
         image_size: 224
         mode: test
         class_index: -1
 
 
   batch_size: 32
-  num_workers: 16
-  prediction_on: "test"
+  num_workers: 60
+  prediction_on: ${data.global_variable.prediction_on}
 
 
 model: # models.module.CLS
@@ -95,8 +104,8 @@ model: # models.module.CLS
   criterion: # torch.nn.BCEWithLogitsLoss
     class_path: torch.nn.BCEWithLogitsLoss
   weight_decay: 0.0
-  prediction_on: "test"
-  save_probabilities_path: ./results/image_syn_real_20k/probabilities/
+  prediction_on: ${data.global_variable.prediction_on}
+  save_probabilities_path: ${trainer.default_root_dir}probabilities/
   lr: 0.0001
 
-  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c ./configs/image_chexpert_real_real_nf_adv.yaml
+  #CUDA_VISIBLE_DEVICES=1  python main.py fit -c /local/home/hhamidi/fairness_on_embeddings/configs/chexpert_all.yaml
